[gd_scene load_steps=13 format=2]

[ext_resource path="res://Effects/Particles/floaty_64.png" type="Texture" id=1]
[ext_resource path="res://Assets/Popup Emotes/pipo-popupemotes003.png" type="Texture" id=2]
[ext_resource path="res://Assets/Music/sfx/sfx_question_timer.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Stages/final_quiz.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.5, 17.5 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.708589 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=8]
radius = 15.0

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="FINAL_QUIZ" type="Area2D"]
position = Vector2( 163, 136 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 6 )
amount = 30
randomness = 1.0
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, -90 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount_curve = SubResource( 7 )

[node name="DialogicBtn" type="TouchScreenButton" parent="."]
position = Vector2( -49, -54 )
shape = SubResource( 8 )
action = "ui_accept"
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="DialogicBtn"]
position = Vector2( 16, 16 )
frames = SubResource( 12 )
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="sfx_tick_clock" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="body_entered" from="." to="." method="_on_FINAL_QUIZ_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FINAL_QUIZ_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
